[package]
name = "artwebsite_api"
version = "0.1.0"
authors = ["Kevin Kuo <kevinkuo15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.1"
actix-session = "0.4.0"
async-trait = "0.1.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "~1"
elasticsearch = "7.11.0-alpha.1"
tokio = { version = "1", features = ["full"] }
oauth2 = "3.0"
jsonwebtoken = "7"
reqwest = { version = "0.9.24" }
actix-web-httpauth = "0.5.1"
futures-util = "0.3.15"
derive_more = "0.99"
argon2 = "0.2"
rand_core = { version = "0.6", features = ["std"] }
lazy_static = "1.4.0"